# rp2350-relay-6ch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
docs/: cli.md  development-setup.md  hardware-info.md  health-model.md  host-cli-ux-repl-plus.md  host-daemon-mode.md  host-library.md  host-session-mode.md  implementation-plan.md  oled-indicator.md  phase-0-plan.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan-audit.md  phase-7-plan.md  phase-8a-plan.md  phase-8b-plan.md  pico-diy-targets.md  prd.md  product-build.md  proposed-plan-audit.md  release.md  remaining-features-review-2026-05-20.md  status-indicators.md  watchdog-adoption-contract.md
docs/discussions/: device-originated-smp-events.md  hardware-watchdogs-mcu-systems.md  health-detection-methodology.md  health-models-embedded-control-systems.md  host-cli-operator-ux.md  host-daemon-multi-device-transcript.md  host-daemon-multi-device.md  indicator-api-design.md  industrial-control-command-model.md  oled-indicator-ui.md  plc-integration-protocol-design.md  post-boot-logo-small-oled-research.md  product-composition-build-lunch.md  product-config-format.md  relay-controller-display-promotion.md  relay-controller-product-promotion.md  rgb-led-buzzer-use-scenarios.md  rp2350-dual-core-zephyr.md  rp2350-relay-ras-zephyr.md  smartpdu-lessons-for-relay-controller.md  subagents-getting-started.md
docs/protocol/: relay-management.md
docs/testing/: communication-loss-verification.md  daemon-smoke-test.md  phase-1-verification.md  phase-2-verification.md  phase-3-verification.md  phase-4-verification.md  phase-5-verification.md  phase-6-verification.md  phase-7-verification.md  phase-8a-verification.md  phase-8b-verification.md  relay-smoke-test.md  test-procedures.md  usb-rpc-smoke-test.md
firmware/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
firmware/boards/raspberrypi/rpi_pico2/: pico2w-relay-dev.overlay
firmware/boards/waveshare/waveshare_rp2350_relay_6ch/: Kconfig  Kconfig.defconfig  Kconfig.waveshare_rp2350_relay_6ch  board.yml  waveshare_rp2350_relay_6ch-pinctrl.dtsi  waveshare_rp2350_relay_6ch.dtsi  waveshare_rp2350_relay_6ch_rp2350b_m33.dts  waveshare_rp2350_relay_6ch_rp2350b_m33.yaml  waveshare_rp2350_relay_6ch_rp2350b_m33_w.dts  waveshare_rp2350_relay_6ch_rp2350b_m33_w.yaml
firmware/dts/bindings/: vendor-prefixes.txt
firmware/dts/bindings/led_strip/: rp2350-relay-6ch,waveshare-ws2812-pio.yaml
firmware/include/rp2350_relay_6ch/: build_info.h.in  health.h  indicator.h  reboot.h  relay.h  relay_mgmt.h  watchdog_supervisor.h
firmware/profiles/: accepted_buzzer_feedback.conf  always_on_owner.conf  display_rotated_180.conf  no_comm_timeout.conf  standard.conf
firmware/src/: health.c  indicator.c  main.c  reboot.c  relay.c  relay_mgmt.c  relay_shell.c  watchdog_supervisor.c  waveshare_ws2812_pio.c
firmware/tests/health/: CMakeLists.txt  testcase.yaml
firmware/tests/health/src/: main.c
firmware/tests/indicator/: CMakeLists.txt  prj.conf  testcase.yaml
firmware/tests/indicator/src/: main.c
firmware/tests/relay/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
firmware/tests/relay/src/: main.c
firmware/tests/relay_mgmt/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
firmware/tests/relay_mgmt/src/: main.c
firmware/tests/support/include/rp2350_relay_6ch_test/: health.h  indicator.h  reboot.h  relay.h  relay_mgmt.h  watchdog_supervisor.h
firmware/tests/watchdog/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
firmware/tests/watchdog/src/: main.c
host/rp2350_relay_6ch/: __init__.py  cli.py  client.py  config.py  constants.py  daemon.py  daemon_client.py  discovery.py  exceptions.py  relayctl.py  session.py  smoke.py  smp.py  systemd.py  transport.py
host/rp2350_relay_6ch/assets/: config.toml.example  rp2350-relayd@.service.in
host/tests/: test_cli.py  test_cli_wrapper.py  test_config.py  test_daemon.py  test_daemon_client.py  test_flash_script.py  test_host_library.py  test_package.py  test_product_build.py  test_relayctl.py  test_session.py  test_systemd.py  test_usb_rpc_smoke.py
products/lunch/: rp2350_relay_6ch-standard.env
products/rp2350_relay_6ch/: product.env  product.yaml
products/rp2350_relay_6ch/release_configs/: boardfarm.env  boardfarm.yaml  standard.env  standard.yaml
scripts/: build-firmware.sh  build-host-executable.sh  build.sh  build_host_executable.py  flash.sh  generate-oled-indicator-preview.py  release-github.sh  smoke-hardware.sh  test-host.sh
tools/: host_library_hardware_smoke.py  rp2350_relay_cli.py  usb_rpc_smoke.py
