[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rp2350-relay-6ch"
version = "0.7.0"
description = "Host tooling for the Waveshare RP2350-Relay-6CH controller"
readme = "docs/prd.md"
requires-python = ">=3.12"
dependencies = [
    "prompt_toolkit>=3.0,<4",
    "pyserial>=3.5",
    "smp>=4.0.2,<5.0",
]

[project.optional-dependencies]
release = [
    "build>=1.2",
    "pyinstaller>=6.0",
]

[project.scripts]
rp2350-relay = "rp2350_relay_6ch.cli:main"

[tool.setuptools]
package-dir = {"" = "host"}

[tool.setuptools.packages.find]
where = ["host"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["host/tests"]
pythonpath = ["host"]
